Bug 115322 - REGRESSION(r142647): Flaky Test: fast/frames/crash-remove-iframe-during-object-beforeload.html
Summary: REGRESSION(r142647): Flaky Test: fast/frames/crash-remove-iframe-during-objec...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P1 Normal
Assignee: Andreas Kling
URL:
Keywords: InRadar, LayoutTestFailure
Depends on:
Blocks: 50856
  Show dependency treegraph
 
Reported: 2013-04-28 02:36 PDT by WebKit Commit Bot
Modified: 2013-05-06 14:55 PDT (History)
6 users (show)

See Also:


Attachments
Archive of layout-test-results from webkit-cq-02 (496.88 KB, application/zip)
2013-04-28 02:36 PDT, WebKit Commit Bot
no flags Details
Archive of layout-test-results from webkit-cq-03 (609.98 KB, application/zip)
2013-05-01 14:58 PDT, WebKit Commit Bot
no flags Details
Archive of layout-test-results from webkit-cq-03 (498.50 KB, application/zip)
2013-05-04 12:34 PDT, WebKit Commit Bot
no flags Details
Patch (1.76 KB, patch)
2013-05-04 13:01 PDT, Andreas Kling
andersca: review+
Details | Formatted Diff | Diff
Archive of layout-test-results from webkit-cq-01 (657.73 KB, application/zip)
2013-05-06 06:52 PDT, WebKit Commit Bot
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description WebKit Commit Bot 2013-04-28 02:36:22 PDT
This is an automatically generated bug from the commit-queue.
fast/frames/crash-remove-iframe-during-object-beforeload.html has been flaky on the commit-queue.

fast/frames/crash-remove-iframe-during-object-beforeload.html was authored by zalan@apple.com.
http://trac.webkit.org/browser/trunk/LayoutTests/fast/frames/crash-remove-iframe-during-object-beforeload.html

The commit-queue just saw fast/frames/crash-remove-iframe-during-object-beforeload.html flake (DumpRenderTree crashed) while processing attachment 199902 [details] on bug 115250.
Bot: webkit-cq-02  Port: <class 'webkitpy.common.config.ports.MacPort'>  Platform: Mac OS X 10.8.3

The bots will update this with information from each new failure.

If you believe this bug to be fixed or invalid, feel free to close.  The bots will re-open if the flake re-occurs.

If you would like to track this test fix with another bug, please close this bug as a duplicate.  The bots will follow the duplicate chain when making future comments.
Comment 1 WebKit Commit Bot 2013-04-28 02:36:26 PDT
Created attachment 199961 [details]
Archive of layout-test-results from webkit-cq-02
Comment 2 WebKit Commit Bot 2013-05-01 14:58:51 PDT
The commit-queue just saw fast/frames/crash-remove-iframe-during-object-beforeload.html flake (DumpRenderTree crashed) while processing attachment 200218 [details] on bug 115455.
Bot: webkit-cq-03  Port: <class 'webkitpy.common.config.ports.MacPort'>  Platform: Mac OS X 10.8.3
Comment 3 WebKit Commit Bot 2013-05-01 14:58:52 PDT
Created attachment 200244 [details]
Archive of layout-test-results from webkit-cq-03
Comment 4 Alexey Proskuryakov 2013-05-03 14:44:26 PDT
With FastMalloc:


Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0   com.apple.WebCore             	0x0000000110c2d59c WTF::OwnPtr<WebCore::RenderLayerCompositor>::operator WebCore::RenderLayerCompositor*WTF::OwnPtr<WebCore::RenderLayerCompositor>::*() const + 12 (OwnPtr.h:78)
1   com.apple.WebCore             	0x0000000110c2bd65 WebCore::RenderView::usesCompositing() const + 37 (RenderView.cpp:1089)
2   com.apple.WebCore             	0x000000010fd1d9d7 WebCore::FrameView::performPostLayoutTasks() + 855 (FrameView.cpp:2778)
3   com.apple.WebCore             	0x000000010fd1d124 WebCore::FrameView::layout(bool) + 4116 (FrameView.cpp:1396)
4   com.apple.WebCore             	0x000000010fa65c22 WebCore::Document::implicitClose() + 978 (Document.cpp:2461)
5   com.apple.WebCore             	0x000000010fcf43db WebCore::FrameLoader::checkCallImplicitClose() + 155 (FrameLoader.cpp:827)
6   com.apple.WebCore             	0x000000010fcf4086 WebCore::FrameLoader::checkCompleted() + 358 (FrameLoader.cpp:771)
7   com.apple.WebCore             	0x000000010fcf2d43 WebCore::FrameLoader::finishedParsing() + 179 (FrameLoader.cpp:704)
8   com.apple.WebCore             	0x000000010fa70bdb WebCore::Document::finishedParsing() + 523 (Document.cpp:4448)
9   com.apple.WebCore             	0x000000010fe5088c WebCore::HTMLConstructionSite::finishedParsing() + 28 (HTMLConstructionSite.cpp:346)
10  com.apple.WebCore             	0x000000010ff410cb WebCore::HTMLTreeBuilder::finished() + 139 (HTMLTreeBuilder.cpp:2924)
11  com.apple.WebCore             	0x000000010fe7098c WebCore::HTMLDocumentParser::end() + 220 (HTMLDocumentParser.cpp:757)
12  com.apple.WebCore             	0x000000010fe6f380 WebCore::HTMLDocumentParser::attemptToRunDeferredScriptsAndEnd() + 288 (HTMLDocumentParser.cpp:768)
Comment 5 Alexey Proskuryakov 2013-05-03 15:54:05 PDT
> With FastMalloc:

Er, GuardMalloc.
Comment 6 WebKit Commit Bot 2013-05-04 12:34:18 PDT
The commit-queue just saw fast/frames/crash-remove-iframe-during-object-beforeload.html flake (DumpRenderTree crashed) while processing attachment 200528 [details] on bug 115587.
Bot: webkit-cq-03  Port: <class 'webkitpy.common.config.ports.MacPort'>  Platform: Mac OS X 10.8.3
Comment 7 WebKit Commit Bot 2013-05-04 12:34:21 PDT
Created attachment 200537 [details]
Archive of layout-test-results from webkit-cq-03
Comment 8 Andreas Kling 2013-05-04 12:56:24 PDT
This was broken by <http://trac.webkit.org/changeset/142647>

 #if USE(ACCELERATED_COMPOSITING)
-    if (RenderView* root = rootRenderer(this)) {
-        if (root->usesCompositing())
-            root->compositor()->frameViewDidLayout();
-    }
+    if (renderView && renderView->usesCompositing())
+        renderView->compositor()->frameViewDidLayout();
 #endif

A previously fetched RenderView* is used after a Widget update has blown the view away.
Comment 9 Radar WebKit Bug Importer 2013-05-04 12:58:02 PDT
<rdar://problem/13810719>
Comment 10 Andreas Kling 2013-05-04 13:01:40 PDT
Created attachment 200539 [details]
Patch
Comment 11 Andreas Kling 2013-05-04 13:24:23 PDT
Committed r149567: <http://trac.webkit.org/changeset/149567>
Comment 12 WebKit Commit Bot 2013-05-06 06:52:28 PDT
The commit-queue just saw fast/frames/crash-remove-iframe-during-object-beforeload.html flake (DumpRenderTree crashed) while processing attachment 200662 [details] on bug 115635.
Bot: webkit-cq-01  Port: <class 'webkitpy.common.config.ports.MacPort'>  Platform: Mac OS X 10.8.3
Comment 13 WebKit Commit Bot 2013-05-06 06:52:31 PDT
Created attachment 200666 [details]
Archive of layout-test-results from webkit-cq-01
Comment 14 Andreas Kling 2013-05-06 14:55:43 PDT
Filed bug 115674 to fix the remaining crash on this test.