REGRESSION(r142647): Flaky Test: fast/frames/crash-remove-iframe-during-object-beforeload.html <http://webkit.org/b/115322> <rdar://problem/13810719>

Reviewed by Anders Carlsson.

Don't cache the FrameView::renderView() in a local since updating Widgets may blow it away.

* page/FrameView.cpp:
(WebCore::FrameView::performPostLayoutTasks):

Canonical link: https://commits.webkit.org/134031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149567 268f45cc-cd09-0410-ab3c-d52691b4dbfc